Updating thr profile.

--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
 							<li class="active"><a href="index.html">Thendo's Portfolio</a></li>
 						</ul>
 						<ul class="icons">
-							<li><a href="https://www.linkedin.com/in/thendo-ramashia-17a339144/" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
-							<li><a href="https://github.com/MansaRon" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
+							<li><a href="https://www.linkedin.com/in/thendo-ramashia-17a339144/" class="icon brands fa-linkedin" target="_blank"><span class="label">LinkedIn</span></a></li>
+							<li><a href="https://github.com/MansaRon" class="icon brands fa-github" target="_blank"><span class="label">GitHub</span></a></li>
 						</ul>
 					</nav>
 
@@ -54,9 +54,13 @@
 									Currently learning ReactJS & NodeJS to become a full stack developer.
 									</p>
 								</header>
-								<a href="#" class="image main"><img src="images/pic01.jpg" alt="" /></a>
+								<a href="#" class="image main">
+									<img src="images/headshot.jpeg" alt="" />
+								</a>
 								<ul class="actions special">
-									<li><a href="#" class="button large">Check It Out</a></li>
+									<li>
+										<a href="#" class="button large">Check It Out</a>
+									</li>
 								</ul>
 							</article>
 
@@ -76,33 +80,46 @@
 									<p>A courier PWA that allows customers to make bookings with their desired addresses. There's Fleet, Courier & Truck Rentals.</p>
 									<ul class="actions special">
 										<li>
-											<a href="https://www.droppa.co.za/droppa/" target="blank" class="button">View Website</a>
+											<a href="https://www.droppa.co.za/droppa/" target="_blank" class="button">View Website</a>
 										</li>
 									</ul>
 								</article>
 								<article>
 									<header>
-										<h2><a href="#">Project 2<br />
-										Coming Soon</a></h2>
+										<h2>
+											<a href="https://lekker-code-db.web.app/">Project 2<br />
+											Office Workers</a>
+										</h2>
 									</header>
-									<a href="#" class="image fit"><img src="images/pic03.jpg" alt="" /></a>
-									<!-- <p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p> -->
+									<a href="#" class="image fit">
+										<img src="images/pic03.jpg" alt="" />
+									</a>
+									<p>A Office application that allows someone to add an office space, and add users within that space. Used for mobile view.</p>
 									<ul class="actions special">
-										<li><a href="#" class="button">Coming Soon</a></li>
-									</ul>
-								</article>
-								<!-- <article>
-									<header>
-										<h2><a href="#">Project 3<br />
-										interdum dolor</a></h2>
-									</header>
-									<a href="#" class="image fit"><img src="images/pic04.jpg" alt="" /></a>
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
-									<ul class="actions special">
-										<li><a href="#" class="button">Full Story</a></li>
+										<li>
+											<a href="https://lekker-code-db.web.app/" target="_blank" class="button">View Project</a>
+										</li>
 									</ul>
 								</article>
 								<article>
+									<header>
+										<h2>
+											<a href="#">Project 3<br />
+												Emetech
+											</a>
+										</h2>
+									</header>
+									<a href="#" class="image fit">
+										<img src="images/pic04.jpg" alt="" />
+									</a>
+									<p>A home page for a client offering several services.</p>
+									<ul class="actions special" disabled>
+										<li>
+											<a href="#" target="_blank" class="button">View Project (In Progresss)</a>
+										</li>
+									</ul>
+								</article>
+								<!-- <article>
 									<header>
 										<h2><a href="#">Project 4<br />
 										nulla imperdiet</a></h2>
@@ -168,10 +185,6 @@
 									<li>Angular (4, 7, 8, 9, 11)</li>
 									<li>ReactJS </li>
 								</ul>
-								<!-- <p> 515 Steyns Place <br />
-									274 Francis Baard Street<br />
-									Pretoria
-								</p> -->
 							</section>
 						</section>
 						<section class="split contact">
