Adding the ionic project onto the profile.

--- a/index.html
+++ b/index.html
@@ -119,18 +119,19 @@
 										</li>
 									</ul>
 								</article>
-								<!-- <article>
+								<article>
 									<header>
-										<h2><a href="#">Project 4<br />
-										nulla imperdiet</a></h2>
+										<h2><a href="#">Project 4<br />Weather App</a></h2>
 									</header>
 									<a href="#" class="image fit"><img src="images/pic05.jpg" alt="" /></a>
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
+									<p>A weather application using Ionic</p>
 									<ul class="actions special">
-										<li><a href="#" class="button">Full Story</a></li>
+										<li>
+											<a href="#" class="button">View Project</a>
+										</li>
 									</ul>
 								</article>
-								<article>
+								<!-- <article>
 									<header>
 										<h2><a href="#">Project 5<br />
 										sed consectetur</a></h2>
