--- a/index.html
+++ b/index.html
@@ -1,9 +1,5 @@
 <!DOCTYPE HTML>
-<!--
-	Massively by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
+
 <html>
 	<head>
 		<title>Massively by HTML5 UP</title>
@@ -92,7 +88,7 @@
 										</h2>
 									</header>
 									<a href="#" class="image fit">
-										<img src="images/pic03.jpg" alt="" />
+										<img src="images/office.jpg" alt="" />
 									</a>
 									<p>A Office application that allows someone to add an office space, and add users within that space. Used for mobile view.</p>
 									<ul class="actions special">
@@ -123,7 +119,7 @@
 									<header>
 										<h2><a href="#">Project 4<br />Weather App</a></h2>
 									</header>
-									<a href="#" class="image fit"><img src="images/pic05.jpg" alt="" /></a>
+									<a href="#" class="image fit"><img src="images/weather.jpg" alt="" /></a>
 									<p>A weather application using Ionic</p>
 									<ul class="actions special">
 										<li>
@@ -131,18 +127,18 @@
 										</li>
 									</ul>
 								</article>
-								<!-- <article>
+								<article>
 									<header>
 										<h2><a href="#">Project 5<br />
-										sed consectetur</a></h2>
+										To Do List</a></h2>
 									</header>
-									<a href="#" class="image fit"><img src="images/pic06.jpg" alt="" /></a>
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
+									<a href="#" class="image fit"><img src="images/notes.jpg" alt="" /></a>
+									<p>A To Do application using React.</p>
 									<ul class="actions special">
-										<li><a href="#" class="button">Full Story</a></li>
+										<li><a href="#" class="button">View Project (In Progress)</a></li>
 									</ul>
 								</article>
-								<article>
+								<!-- <article>
 									<header>
 										<h2><a href="#">Project 6<br />
 										primis vestibulum</a></h2>
